@@ -98,7 +98,7 @@ Bug Fixes
   fields to null (Ben Pennell, Rob, shalin)
 
 * SOLR-4543: setting shardHandlerFactory in solr.xml/solr.properties does not work.
-  (Ryan Ernst, Robert Muir via Erick Ericson)
+  (Ryan Ernst, Robert Muir via Erick Erickson)
 
 * SOLR-4371: Admin UI - Analysis Screen shows empty result (steffkes)
 
@@ -122,6 +122,9 @@ Bug Fixes
 * SOLR-4570: Even if an explicit shard id is used, ZkController#preRegister 
   should still wait to see the shard id in it's current ClusterState.
   (Mark Miller)
+
+* SOLR-4585: The Collections API validates numShards with < 0 but should use 
+  <= 0. (Mark Miller)
 
 Optimizations
 ----------------------
